# contrats-cointsender

./: .env.example  .gitignore  .solcover.js  README.md  hardhat.config.js  package-lock.json  package.json
contracts/: MultiSend.sol  MultiSendV1_1.sol
contracts/testing/: ERC20Mock.sol  MultiSendV1_0.sol
deploy/: 00_deploy_my_contract.js
near-contract/: Cargo.toml  build.sh  deploy.sh
near-contract/mock-token/: Cargo.toml
near-contract/mock-token/src/: lib.rs
near-contract/multisend/: Cargo.toml
near-contract/multisend/src/: admin.rs  ft_multisend.rs  lib.rs  upgrade.rs
near-contract/multisend/tests/workspace/: main.rs  utils.rs
near-contract/multisend/tests/workspace/multisend_diff_token/: mod.rs  multisend_diff_token.rs  multisend_fail_insufficient_balance_for_one_recipient.rs  multisend_fail_insufficient_balance_in_amount.rs  multisend_success_diff_token.rs
near-contract/multisend/tests/workspace/multisend_near/: mod.rs  multisend_fail_insufficient_balance_for_one_recipient.rs  multisend_fail_insufficient_balance_in_attached_deposit.rs  multisend_near.rs
near_contract/multisend/: Cargo.toml  deploy.sh
near_contract/multisend/src/: admin.rs  ft.rs  ft_multisend.rs  lib.rs
near_contract/multisend/tests/workspace/: main.rs  utils.rs
near_contract/multisend/tests/workspace/multisend_near/: mod.rs  multisend_near.rs
scripts/: create-secret.js  deploy.js  update.js
test/: multiSend.js
