[package]
name = "multisend"
version = "0.1.0"
authors = ["dmytro.shashkevych@megadevllc.com"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.6"
near-contract-standards = "4.0.0-pre.6"
near-sys = "0.2.0"


[dev-dependencies]
workspaces = "0.7.0"
tokio = "1.21.1"
anyhow = "1.0.65"